--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,21 @@ body {
   font-family: "Open Sans", serif;
 }
 
+label {
+  background-color: transparent;
+  border: 0;
+  border-bottom: solid 1px #f16051;
+  width: 30%;
+  padding-bottom: 4px;
+  color: #fff !important;
+  font-weight: lighter;
+  letter-spacing: 2px;
+  margin-bottom: 30px;
+  margin-right: 20px;
+  font-size: 20px;
+  outline: none;
+}
+
 .wrapper {
   background: linear-gradient(to right, #e67e22, #e74c3c);
   height: 100vh;
@@ -55,8 +70,13 @@ body {
   padding-left: 50px;
 }
 
-input[type="text"] {
-  background-color: transparent;
+.grey_color {
+  color: #2c3e50;
+  font-size: 14px;
+}
+
+option {
+  background-color: #2c3e50;
   border: 0;
   border-bottom: solid 1px #f16051;
   width: 30%;
